# Refraiming

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
tests/: test_app.py  test_e2e.py
