[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refraiming"
version = "0.1.0"
description = "AI-based photo editing tool."
authors = [{ name = "Refraiming" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pillow",
    "python-dotenv",
    "requests",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "httpx",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
